tests/ui/discord-frontend/entity_macro/expected_colon_1.stderr
error: expected `:`
  --> tests/ui/discord-frontend/entity_macro/expected_colon_1.rs:38:24
   |
LL |     extra = ["extra_id"],
   |                        ^

error: aborting due to 1 previous error

